trying to fix background image load on iphone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,8 +236,10 @@
      }
  }
 
- @media only screen and (max-width: 480px) {
+ @media only screen and (min-width: 480px) {
      body {
-         background-image: url("../images/background-image-phone.jpg") no-repeat 50% 0;
+         background-image: url("../images/background-image-phone.jpg");
+         background-repeat:  no-repeat;
+         background-size: cover;
      }
  }
